fix failing tests with zulu jdk 7
see https://github.com/orientechnologies/orientdb/issues/5855